# TechnoPark

./: .gitignore  ActorTitles.cpp  ActorTitles.h  CMakeLists.txt  NamesOfTitles.cpp  NamesOfTitles.h  NonAdultMovies.cpp  README.md  main.cpp
.github/workflows/: ci.yml
src/: ActorTitles.cpp  NamesOfTitles.cpp  NamesOfTitles.h  NonAdultMovies.cpp  NonAdultMovies.h  main.cpp  support.cpp  textEditorOperations.cpp
tests/unit_tests/: test.cpp
